# easyppisp

./: .gitignore  LICENSE  README.md  build_local.bat  pyproject.toml  setup_local.py
Old Docs to read for reference/: 00 ppisp-original-from-github.md  01 ppisp-v4-gemini.md  02 ppisp-v4-claude.md  Tailscale.md
examples/: 01_quickstart.py  02_learned_isp.py  03_augmentation.py  04_optimization.py
src/easyppisp/: __init__.py  cli.py  functional.py  losses.py  modules.py  params.py  presets.py  tasks.py  utils.py  validation.py
src/easyppisp/_internal/: __init__.py  color_homography.py  cuda_layer.py
src/easyppisp/_internal/cuda/: compile_cuda.sh  setup.py
src/easyppisp/_internal/cuda/src/: ppisp_math.cuh  ppisp_math_bwd.cuh
tests/: benchmark_gpu.py  conftest.py  test_functional.py  test_gradient_flow.py  test_losses.py  test_modules.py  test_params.py  test_pipeline_integration.py  test_validation.py
